# ReaDirect-AI-ASR

./: .env.example  .gitignore  READIRECT_ASR_AUTOMATIC_MODE_CONTRACT.md  README.md  pyproject.toml  requirements.txt
ReaDirect-Dataset/: README.md
api/: README.md  dependencies.py  errors.py  main.py  schemas.py  security.py  service.py
configs/: adaptive_config.yaml  analysis_config.yaml  asr_config.yaml  dataset_config.yaml  dataset_registry.yaml  deployment_config.example.yaml  finetuning_decision.yaml  service_config.yaml  wav2vec2_alpha.yaml  wav2vec2_beta.yaml  wav2vec2_delta.yaml  wav2vec2_epsilon.yaml  wav2vec2_gamma.yaml  wav2vec2_letters_v2.yaml  wav2vec2_readirect_asr.yaml  wav2vec2_shared_benchmark.yaml  whisper_finetune_config.yaml
content_bank/: README.md
content_bank_enriched/: README.md
data/: README.md
docs/: ADAPTIVE_TUTORING_ENGINE.md  API_EXAMPLES.md  ASR_BASELINE_EVALUATION.md  AUDIO_QUALITY_VALIDATION.md  CONTENT_ENRICHMENT.md  DATASET_LICENSE_PLAN.md  DEVELOPER_REINFORCEMENT_MODE.md  DYNAMIC_EXPECTED_WORD_CORRECTION.md  FASTAPI_SERVICE.md  FINAL_HANDOFF_CHECKLIST.md  FINETUNING_DECISION_WORKFLOW.md  GOP_PRONUNCIATION_EVIDENCE.md  LARAVEL_INTEGRATION_CONTRACT.md  MAIN_REPO_IMPORT_GUIDE.md  MANUAL_FINETUNING_STEPS.md  MODEL_ARTIFACT_SHARING.md  PASSAGE_AWARE_DYNAMIC_ALIGNMENT_REPAIR.md  PHASE1C_ASR_SPELLING_VARIANT_CORRECTION.md  PROJECT_PROCESS_REPORT.md  READING_ANALYSIS_ENGINE.md  REINFORCEMENT_CORRECTIONS.md  WAV2VEC2_ALPHA.md  WAV2VEC2_BETA.md  WAV2VEC2_CTC_BEAM_DECODING.md  WAV2VEC2_CTC_LM_DECODING.md  WAV2VEC2_DELTA.md  (+6 more)
(+293 files in other folders)
