[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readirect-ai-asr"
version = "0.1.0"
description = "Python AI/ASR research and service layer for ReaDirect."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "ReaDirect Team" }
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"
